@@ -43,6 +43,9 @@ __thiscall void PlayerManager::RemoveCoPlayer(Entity_Player *player);
 "538bdc83ec0883e4f883c404558b6b??896c24??8bec6aff68????????64a1????????505383ec685657a1????????33c5508d45??64a3????????8bf18975??8b46":
 __thiscall void PlayerManager::spawn_selected_baby(int param_1, int param_2);
 
+"558bec6aff68????????64a1????????5081ecfc000000535657a1????????33c5508d45??64a3????????8bd9":
+__thiscall void PlayerManager::RemoveCoPlayer(Entity_Player * player, bool unusedBool);
+
 struct PlayerManager depends (RNG)
 {
     RNG _rng : 0x0; //0x0
