@@ -206,7 +206,7 @@ LUA_FUNCTION(Lua_AnyPlayerTypeHasTrinket)
 {
 	PlayerManager* playerManager = g_Game->GetPlayerManager();
 	unsigned int playerType = (unsigned int)luaL_checkinteger(L, 1);
-	int trinket = luaL_checkinteger(L, 2);
+	int trinket = (int)luaL_checkinteger(L, 2);
 	bool ignoreModifiers = lua::luaL_optboolean(L, 3, false);
 
 	for (Entity_Player* player : g_Game->_playerManager._playerList)
@@ -227,7 +227,7 @@ LUA_FUNCTION(Lua_AnyPlayerTypeHasCollectible)
 {
 	PlayerManager* playerManager = g_Game->GetPlayerManager();
 	unsigned int playerType = (unsigned int)luaL_checkinteger(L, 1);
-	int collectible = luaL_checkinteger(L, 2);
+	int collectible = (int)luaL_checkinteger(L, 2);
 	bool ignoreModifiers = lua::luaL_optboolean(L, 3, false);
 
 	for (Entity_Player* player : g_Game->_playerManager._playerList)
@@ -255,6 +255,15 @@ LUA_FUNCTION(Lua_SpawnSelectedBaby)
 	return 0;
 }
 
+LUA_FUNCTION(Lua_RemoveCoPlayer)
+{
+	PlayerManager* playerManager = g_Game->GetPlayerManager();
+	auto* player = lua::GetUserdata<Entity_Player*>(L, 1, lua::Metatables::ENTITY_PLAYER, "Entity_Player");
+
+	playerManager->RemoveCoPlayer(player, false);
+	return 0;
+}
+
 
 static void RegisterPlayerManager(lua_State* L) {
 	//lua::RegisterFunction(L, lua::Metatables::GAME, "GetPlayerManager", Lua_GetPlayerManager);
@@ -277,7 +286,7 @@ static void RegisterPlayerManager(lua_State* L) {
 		lua::TableAssoc(L, "AnyPlayerTypeHasTrinket", Lua_AnyPlayerTypeHasTrinket);
 		lua::TableAssoc(L, "AnyPlayerTypeHasCollectible", Lua_AnyPlayerTypeHasCollectible);
 		lua::TableAssoc(L, "SpawnSelectedBaby", Lua_SpawnSelectedBaby);
-		
+		lua::TableAssoc(L, "RemoveCoPlayer", Lua_RemoveCoPlayer);
 
 		lua_setglobal(L, "PlayerManager");
 }
