@@ -38,6 +38,8 @@ Additions:
 * PlayerHUDHeart:
 	- IsEternalHeartOverlayVisible
 	- IsFadingHeart
+* PlayerManager:
+	- RemoveCoPlayer
 * Enums:
 	- CambionFamiliarFlag
 * Added a new option "Extra debug render for FindInRadius". While the DebugFlag.HITSPHERES flag is enabled, debug spheres will be rendered for FindInRadius/QueryRadius calls.
